--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "tailwindcss": "^3.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "overrides": {
+    "viem": "2.31.0"
   }
 }
