--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@privy-io/react-auth": "^2.18.0",
     "@privy-io/server-auth": "1.21.2",
     "@tailwindcss/forms": "^0.5.3",
+    "@thenamespace/offchain-manager": "^1.0.2",
     "axios": "^1.9.0",
     "next": "latest",
     "react": "18.2.0",
